--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.1.1
   provider: ^6.1.0
+  shared_preferences: ^2.2.2
   sqflite: ^2.3.0
 
 dev_dependencies:
